2012-10-03 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/stageschema.sh:
	[ 3574169 ] revert interop2 stageschema

2012-09-13 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* sfcBroker.c, mlog.c:
	[ 3567450 ] Clients shouldn't cause log messages

2012-08-28  Dave Heller <hellerda@us.ibm.com>

	* indCIMXMLExport.c:
	[ 3562538 ] Enable curl debug via env variable

2012-08-08 Dave Heller <hellerda@us.ibm.com>

	* providerDrv.c:
	[ 3546279 ] Core dump in providerDrv on Qualifier not found

2012-08-08 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* httpAdapter.c, cimXmlRequest.c, cimXmlRequest.h, sfcBasicPAMAuthentication.c
	[ 3555395 ] Additional auth lib return codes

2012-07-29  Dave Heller <hellerda@us.ibm.com>

	* sfcb.init-none.in, sfcb.init-redhat.in, sfcb.init-suse.in:
	[ 3541554 ] insecure LD_LIBRARY_PATH usage

2012-07-20 Dave Heller <hellerda@us.ibm.com>

	* classProviderGz.c:
	[ 3527714 ] Every other EnumerateClasses fails

2012-07-19 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* brokerUpc.c, indCIMXMLExport.c, indCIMXMLHandler.c, interopProvider.c,
	support.c, support.h:
	[ 3539006 ] Possible indication deadlock 

2012-07-10 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/stageschema.sh:
	[ 3532494 ] interopProvider not honoring SourceNamespaces[] correctly
	Test case schema incorrect

2012-07-06  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* internalProvider.c, providerMgr.c:
        Discrepancy between original patch (git) for 1901737 resulted in crash. Fixed.

2012-07-05  Narasimha Sharoff  <nsharoff@us.ibm.com>

	* interopProvider.c, sfcCustomLib.c, support.c:
	[ 3538858 ] custom routine to log indInst objinfo

2012-07-02  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* internalProvider.c, providerMgr.c:
	[ 1901737 ] Memory leak in internalProvider.c

	* test/TestProviders/cmpiTestInstanceProvider.c:
        [ 3539555 ] Memory leak in TestInstanceProvider

	* providerDrv.c: