@@ -17,6 +17,7 @@ Bugs fixed:
 - 3541554 insecure LD_LIBRARY_PATH usage
 - 3546279 Core dump in providerDrv on Qualifier not found
 - 3574169 revert interop2 stageschema
+- 3573507 CreateInstance for IndicationFilter doesn't accept DMTF:CQL
 
 Changes in 1.3.15
 =================
